[fix] Contact section spacing issue

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,12 +1,8 @@
 .contact-section {
   position: relative;
   padding: 4em 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
 
-  @media (screen and max-width: 768px) {
-    height: auto !important;
+  @media (max-width: 768px) {
     padding: 2em 0;
   }
 
@@ -28,7 +24,7 @@
       .map-container {
         overflow:hidden;
         background:none!important;
-        min-height: 300px;
+        min-height: 150px;
         height: auto;
         width: 100%;
 
